# fact

./: .coderabbit.yml  .containerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  Containerfile  Makefile  NOTICE  README.md  about.toml  constants.mk  konflux.Containerfile  rpms.in.yaml  rpms.lock.tmp.yaml  rpms.lock.yaml  rpms.rhel.repo  rust-toolchain.toml
.claude/: settings.json
.github/: CODEOWNERS  pull_request_template.md  renovate.json5
.github/actions/validate-version/: action.yml
.github/workflows/: ci.yml  container-build.yml  integration-tests.yml  konflux-tests.yml  license-checks.yml  performance-tests.yml  pr-checklist.yml  prepare-release.yml  release.yml  rust.yml  unit-tests.yml
.tekton/: fact-4-10-pull-request.yaml  fact-4-10-push.yaml  fact-4-11-pull-request.yaml  fact-4-11-push.yaml  fact-build.yaml  fact-component-pipeline.yaml  fact-pull-request.yaml  fact-push.yaml
ansible/: ansible.cfg  run-performance-tests.yml  run-tests.yml  run-unit-tests.yml  unit-tests.yml
ansible/group_vars/: all.yml  container_engine_podman.yml  gcp.yml  platform_rhcos_arm64.yml  platform_rhel.yml
ansible/roles/unit-tests/tasks/: docker.yml  dump-result.yml  main.yml  podman.yml
builder/install/: 80-libbpf.sh  install-dependencies.sh  versions.sh
docs/: kernel-support.md  references.md  release.md
docs/otel/: grafana-dashboard-provider.yaml  grafana-fact-dashboard.json  otel.md
fact/: Cargo.toml  build.rs
fact-api/: Cargo.toml  build.rs
fact-api/src/: lib.rs
fact-core/: Cargo.toml  build.rs
fact-core/src/: lib.rs
fact-core/src/config/: mod.rs  reloader.rs  tests.rs
fact-ebpf/: Cargo.toml  Makefile  build.rs  builtins.h  file.h  main.c  maps.h  process.h  types.h
fact-ebpf/src/: lib.rs
fact-ebpf/src/bpf/: bound_path.h  checks.c  d_path.h  events.h  file.h  inode.h  kdev.h  main.c  maps.h  metadata.h  process.h  raw_event.h  types.h  vmlinux.h
fact-ffi/: Cargo.toml  build.rs
fact-ffi/src/: inode_store.rs  lib.rs
fact-ffi/src/c/: inode.c
fact-operator/: Cargo.toml
fact-operator/src/: lib.rs  main.rs  spec.rs
fact/src/: bpf.rs  cgroup.rs  client.rs  config.rs  endpoints.rs  event.rs  fs_walker.rs  grpc.rs  health_check.rs  healthcheck.rs  host_info.rs  host_scanner.rs  lib.rs  main.rs  mount_info.rs  output.rs  pre_flight.rs  profiler.rs  rate_limiter.rs  replay.rs
fact/src/bpf/: bindings.rs  checks.rs  mod.rs
fact/src/config/: builder.rs  mod.rs  reloader.rs  tests.rs
fact/src/event/: mod.rs  parser.rs  process.rs
fact/src/metrics/: exporter.rs  host_scanner.rs  kernel_metrics.rs  mod.rs
fact/src/output/: grpc.rs  mod.rs  otel.rs  stdout.rs
fact/src/output/otel/: mod.rs
k8s/: example-cr.yml  manifest.yml  operator.yml
mock-server/: .gitignore  Makefile  requirements.txt  server.py
performance-tests/: Containerfile  Makefile  main.py  store.py
performance-tests/workloads/: ignored.ber  ignored_and_monitored.ber  monitored.ber
tests/: Makefile  conftest.py  event.py  logs.py  metrics.py  pyrightconfig.json  pytest.ini  requirements.txt  ruff.toml  server.py  test_acl.py  test_basic.py  test_config_hotreload.py  test_file_open.py  test_inode_tracking.py  test_inode_xattr.py  test_misc.py  test_path_chmod.py  test_path_chown.py  test_path_mkdir.py  test_path_rename.py  test_path_rmdir.py  test_path_unlink.py  test_rate_limit.py  test_wildcard.py  test_xattr.py  utils.py
tests/containers/editors/: Containerfile
tests/containers/self-deleter/: Cargo.toml  Containerfile
tests/containers/self-deleter/src/: main.rs
tests/test_editors/: commons.py  test_nvim.py  test_sed.py  test_vi.py  test_vim.py
