[workspace]
resolver = "2"
members = [
    "fact",
    "fact-api",
]
default-members = ["fact"]

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }

anyhow = { version = "1", default-features = false, features = ["std", "backtrace"] }
clap = { version = "4.5.41", features = ["derive", "env"] }
env_logger = { version = "0.11.5", default-features = false }
hyper = { version = "1.6.0", default-features = false }
hyper-util = { version = "0.1.16", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
prost = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1.40.0", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
tokio-stream = "0.1.17"
tonic = { version = "0.13.1", features = ["tls-ring"] }
tonic-build = "0.13.1"
uuid = { version = "1.17.0", features = ["v4"] }
which = { version = "6.0.0", default-features = false }
bindgen = "0.72.0"
