[workspace]
resolver = "2"
members = [
    "fact",
    "fact-api",
    "fact-ebpf",
]
default-members = ["fact"]

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }

anyhow = { version = "1", default-features = false, features = ["std", "backtrace"] }

# Compiling this dependency fails with GCC 15+.
# If you are running with this version, export the following variable:
#
# export CFLAGS="-Wno-error=unterminated-string-initialization"
#
# See this issue for more details:
# https://github.com/aws/aws-lc-rs/issues/935
aws-lc-rs = { version = "*", default-features = false, features = ["fips"] }
clap = { version = "4.5.41", features = ["derive", "env"] }
env_logger = { version = "0.11.5", default-features = false, features = ["humantime"] }
http-body-util = "0.1.3"
hyper = { version = "1.6.0", default-features = false }
hyper-util = { version = "0.1.16", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
prometheus-client = { version = "0.24.0", default-features = false }
prost = "0.14.0"
prost-types = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.40.0", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic = { version = "0.14.0", features = ["tls-aws-lc"] }
tonic-prost = "0.14.0"
tonic-prost-build = "0.14.0"
uuid = { version = "1.17.0", features = ["v4"] }
bindgen = "0.72.0"
tempfile = { version = "3.20.0", default-features = false }
yaml-rust2 = "0.10.3"

[profile.release]
debug = "line-tables-only"
