[workspace]
resolver = "2"
members = [
    "fact",
    "fact-api",
    "fact-ebpf",
]
default-members = ["fact"]

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }

anyhow = { version = "1", default-features = false, features = ["std", "backtrace"] }
clap = { version = "4.5.41", features = ["derive", "env"] }
env_logger = { version = "0.11.5", default-features = false, features = ["humantime"] }
http-body-util = "0.1.3"
hyper = { version = "1.6.0", default-features = false }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.16", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
native-tls = { version = "0.2.14", features = ["alpn"] }
openssl = "0.10.75"
prometheus-client = { version = "0.24.0", default-features = false }
prost = "0.14.0"
prost-types = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.40.0", default-features = false, features = [
    "fs",
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
tokio-native-tls = "0.3.1"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic = { version = "0.14.0" }
tonic-prost = "0.14.0"
tonic-prost-build = "0.14.0"
uuid = { version = "1.17.0", features = ["v4"] }
bindgen = "0.72.0"
tempfile = { version = "3.20.0", default-features = false }
yaml-rust2 = "0.10.3"

[profile.release]
debug = "line-tables-only"
