[package]
name = "fact-core"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
yaml-rust2 = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
