[package]
name = "fact-operator"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
futures = { version = "0.3.32", default-features = false }
kube = { version = "4.0.0", default-features = false, features = ["client", "openssl-tls", "derive", "runtime"] }
k8s-openapi = { version = "0.28.0", features = ["latest", "schemars"] }
log = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
yaml-rust2 = { workspace = true }

fact-core = { path = "../fact-core" }
