[package]
name = "fact"
version = "0.2.0-dev"
edition = "2021"

license.workspace = true

[dependencies]
anyhow = { workspace = true }
aya = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
prometheus-client = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
yaml-rust2 = { workspace = true }

fact-api = { path = "../fact-api" }
fact-ebpf = { path = "../fact-ebpf" }
fact-ffi = { path = "../fact-ffi" }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }

[[bin]]
name = "fact"
path = "src/main.rs"

[features]
bpf-test = []
