[package]
name = "fact"
version = "0.2.0-dev"
edition = "2021"

license.workspace = true

[dependencies]
anyhow = { workspace = true }
aya = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-rustls = { workspace = true }
hyper-tls = { workspace = true, optional = true }
hyper-util = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
native-tls = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
rustls = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-native-tls = { workspace = true, optional = true }
tokio-stream = { workspace = true }
prometheus-client = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
yaml-rust2 = { workspace = true }

fact-api = { path = "../fact-api" }
fact-ebpf = { path = "../fact-ebpf" }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }

[[bin]]
name = "fact"
path = "src/main.rs"

[features]
bpf-test = []
native-tls = [
    "dep:hyper-tls",
    "dep:native-tls",
    "dep:openssl",
    "dep:tokio-native-tls",
]
