[package]
name = "fact"
version = "0.4.0-dev"
edition = "2024"

license.workspace = true

[dependencies]
anyhow = { workspace = true }
aya = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
glob = { workspace = true }
globset = { workspace = true }
governor = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-tls = { workspace = true }
hyper-util = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
native-tls = { workspace = true }
opentelemetry = { version = "0.32.0", optional = true }
opentelemetry-otlp = { version = "0.32.0", optional = true }
opentelemetry_sdk = { version = "0.32.1", features = [ "logs"], optional = true }
openssl = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-native-tls = { workspace = true }
tokio-stream = { workspace = true }
prometheus-client = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
uuid = { workspace = true }
yaml-rust2 = { workspace = true }

fact-api = { path = "../fact-api" }
fact-core = { path = "../fact-core" }
fact-ebpf = { path = "../fact-ebpf" }

[dev-dependencies]
tempfile = { workspace = true }
regex = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }

[[bin]]
name = "fact"
path = "src/main.rs"

[features]
bpf-test = []
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]
